--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,20 @@
-asgiref==3.2.7
-certifi==2020.4.5.1
-Django==3.0.5
-django-filter==2.2.0
+asgiref==3.2.5
+certifi==2019.11.28
+chardet==3.0.4
+Django==3.0.4
 djangorestframework==3.11.0
-Markdown==3.2.1
-pytz==2020.1
+gunicorn==20.0.4
+idna==2.9
+pytz==2019.3
 sqlparse==0.3.1
+shortuuid==1.0.1
+PyJWT==1.7.1
+python-dotenv==0.12.0
+twilio==6.37.0
+requests==2.23.0
+psycopg2==2.8.4
+semantic-version==2.3.1
+six==1.14.0
+urllib3==1.25.8
+sentry-sdk==0.14.3
+django-taggit==1.2.0
