--- a/care/frontend/package.json
+++ b/care/frontend/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.9.13",
+    "axios": "^0.19.2",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-text-mask": "^5.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
