--- a/example.env
+++ b/example.env
@@ -1,4 +1,7 @@
 # EDIT THIS FILE AND RESAVE AS .env one directory above the django project
+# import random
+# SECRET_KEY = ''.join(random.SystemRandom().choice('abcdefghijklmnopqrstuvwxyz0123456789!#%^*(-_=+)') for i in range(50))
+# print(SECRET_KEY)
 
 #@@ GENERAL @@
 DEBUG=true
